--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Portfolio of Himanshu Kumar - B.Tech Student in Electronics & Communication Engineering passionate about software development and web technologies" />
     <meta name="author" content="Himanshu Kumar" />
 
-    <meta  content="Himanshu Kumar - Portfolio" />
+    <meta  content="Himanshu Kumar" />
     <meta property="og:description" content="Portfolio of Himanshu Kumar - B.Tech Student in Electronics & Communication Engineering passionate about software development and web technologies" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="Portfolio" />
@@ -22,7 +22,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 
-    
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/public/favicon.ico" type="image/x-icon">
   </head>
